--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div class="window-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a. Consequat interdum varius sit amet. Euismod lacinia at quis risus sed vulputate odio ut. Sagittis purus sit amet volutpat consequat. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Et netus et malesuada fames ac turpis egestas sed tempus. Cras ornare arcu dui vivamus arcu felis bibendum. At volutpat diam ut venenatis tellus in metus vulputate eu. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus eget nunc scelerisque viverra. Tellus in hac habitasse platea. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec nam aliquam sem et tortor consequat id. Mattis molestie a iaculis at erat pellentesque. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Non arcu risus quis varius quam quisque id. Sit amet purus gravida quis.
+                    LearnMode is a capstone project to develop a web-based solution for the University of Puerto Rico: Mayagüez (UPRM) immunology laboratory. The project focuses on addressing the challenges faced by educators in performing Ouchterlony Double Diffusion experiments, which are sensitive to variables such as temperature and often yield undesirable results. The project aims to replace outdated methods such as chalkboard drawings by developing a user-friendly web application that allows for easy comparison of antigens and identification of reactions. LearnMode seeks to simplify and modernize educational materials, bridging the gap between software and non-software backgrounds to enable effective collaboration in educational technology projects.
                 </p>
             </div>
         </div>
@@ -32,7 +32,7 @@
             </div>
             <div class="window-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a. Consequat interdum varius sit amet. Euismod lacinia at quis risus sed vulputate odio ut. Sagittis purus sit amet volutpat consequat. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Et netus et malesuada fames ac turpis egestas sed tempus. Cras ornare arcu dui vivamus arcu felis bibendum. At volutpat diam ut venenatis tellus in metus vulputate eu. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus eget nunc scelerisque viverra. Tellus in hac habitasse platea. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec nam aliquam sem et tortor consequat id. Mattis molestie a iaculis at erat pellentesque. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Non arcu risus quis varius quam quisque id. Sit amet purus gravida quis.
+                    The project aims to address the need for an immunology diffusion simulation tool in the UPRM biology department while also addressing the need to modernize educational materials. Addressing these needs is crucial as it directly impacts students' education and professional careers in these programs. The proposed innovation is a web-based application that can perform basic immunodiffusion simulations integrated as a module within a more extensive web application. Users can create modules without software backgrounds, but the application facilitates collaboration between module designers and developers for more complex content, such as immunology simulations.
                 </p>
             </div>
         </div>
@@ -43,7 +43,23 @@
             </div>
             <div class="window-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a. Consequat interdum varius sit amet. Euismod lacinia at quis risus sed vulputate odio ut. Sagittis purus sit amet volutpat consequat. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Et netus et malesuada fames ac turpis egestas sed tempus. Cras ornare arcu dui vivamus arcu felis bibendum. At volutpat diam ut venenatis tellus in metus vulputate eu. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus eget nunc scelerisque viverra. Tellus in hac habitasse platea. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec nam aliquam sem et tortor consequat id. Mattis molestie a iaculis at erat pellentesque. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Non arcu risus quis varius quam quisque id. Sit amet purus gravida quis.
+                    <b>Project General Goal: </b> Develop an application that allows users to perform basic immunodiffusion simulations, with success measured by evaluating its usage and adoption by students and faculty at UPRM.
+                </p>
+                <br>
+                <p>
+                    <b>Objective 1: </b> Integrate the immunodiffusion simulation into a web application as a module, measuring success through testing module compatibility and ease of use within the platform.
+                </p>
+                <br>
+                <p>
+                    <b>Objective 2: </b> Provide module creation tools for individuals without software backgrounds, with effectiveness evaluated by observing the ability of non-software background individuals to create modules.
+                </p>
+                <br>
+                <p>
+                    <b>Objective 3: </b> Foster collaboration between module designers and developers for more complex modules, evaluating the efficiency and satisfaction of both groups with the collaboration process through surveys.
+                </p>
+                <br>
+                <p>
+                    <b>Objective 4: </b> Increase student engagement and performance in the immunology laboratory by 10% within the first year of implementation, with evaluation through pre- and post-implementation assessments, student feedback, and faculty observations. 
                 </p>
             </div>
         </div>
@@ -54,7 +70,16 @@
             </div>
             <div class="window-content">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a. Consequat interdum varius sit amet. Euismod lacinia at quis risus sed vulputate odio ut. Sagittis purus sit amet volutpat consequat. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Et netus et malesuada fames ac turpis egestas sed tempus. Cras ornare arcu dui vivamus arcu felis bibendum. At volutpat diam ut venenatis tellus in metus vulputate eu. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus eget nunc scelerisque viverra. Tellus in hac habitasse platea. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec nam aliquam sem et tortor consequat id. Mattis molestie a iaculis at erat pellentesque. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Non arcu risus quis varius quam quisque id. Sit amet purus gravida quis.
+                    <b>Proposed Solution: </b> The proposed solution is developing an application that provides basic immunodiffusion simulations for use in the immunology laboratory at the University of Puerto Rico: Mayagüez. The simulation will be integrated into a web application as a module and will be accompanied by module creation tools for individuals with non-software backgrounds. The application will foster collaboration between module designers and developers for more complex modules. 
+                </p>
+                <br>
+                <p>
+                    <b>Gap with Existing Solution: </b> Using a chalkboard to teach immunodiffusion is outdated and lacks the hands-on experience required for students to grasp the concept entirely. Additionally, the previous computer simulation that was once available is no longer functional, leaving the biology department needing a reliable tool for conducting immunodiffusion simulations. 
+
+                </p>
+                <br>
+                <p>
+                    <b>Value Proposition: </b> The solution's value proposition is to provide students with an interactive and engaging tool to learn about immunology diffusion, which will improve their overall understanding and performance in the subject. The module creation tools will also provide educators with an easy-to-use solution to modernize their educational material without investing significant time and effort. 
                 </p>
             </div>
         </div>
@@ -66,9 +91,9 @@
             <div class="window-content2">
                 
                 <img  class="content2-img" src="./images/design1.png"/>
-
+                <br>
                 <p class="content2-p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a. Consequat interdum varius sit amet. Euismod lacinia at quis risus sed vulputate odio ut. Sagittis purus sit amet volutpat consequat. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Et netus et malesuada fames ac turpis egestas sed tempus. Cras ornare arcu dui vivamus arcu felis bibendum. At volutpat diam ut venenatis tellus in metus vulputate eu. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus eget nunc scelerisque viverra. Tellus in hac habitasse platea. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec nam aliquam sem et tortor consequat id. Mattis molestie a iaculis at erat pellentesque. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Non arcu risus quis varius quam quisque id. Sit amet purus gravida quis.
+                    The visual components of the simulation were styled to be very similar to the reference material that Dr. Acevedo utilizes in the laboratory. The simulator allows the user to select the antigens and antibodies in each location and visualize how they interact with each other.  
                 </p>
             </div>
         </div>
@@ -80,9 +105,9 @@
             <div class="window-content2">
                 
                 <img  class="content2-img" src="./images/design2.png"/>
-
+                <br>
                 <p class="content2-p">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sollicitudin aliquam ultrices sagittis orci a. Consequat interdum varius sit amet. Euismod lacinia at quis risus sed vulputate odio ut. Sagittis purus sit amet volutpat consequat. Odio eu feugiat pretium nibh ipsum consequat nisl vel pretium. Et netus et malesuada fames ac turpis egestas sed tempus. Cras ornare arcu dui vivamus arcu felis bibendum. At volutpat diam ut venenatis tellus in metus vulputate eu. Scelerisque fermentum dui faucibus in ornare quam viverra orci. Cursus eget nunc scelerisque viverra. Tellus in hac habitasse platea. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Id interdum velit laoreet id donec ultrices tincidunt arcu. Nec nam aliquam sem et tortor consequat id. Mattis molestie a iaculis at erat pellentesque. Viverra orci sagittis eu volutpat odio facilisis mauris sit. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Non arcu risus quis varius quam quisque id. Sit amet purus gravida quis.
+                    The Learn Mode Platform will allow users with professor roles to see past modules they have created and allow them to create new ones. They will also be able to create a test and associate it with a specific module. They can also designate the test as "diagnostic," enabling them to compare the before and after results. As pictured above, the professor will also be able to view individual students' performance and statistics about the section in general. 
                 </p>
             </div>
         </div>
