Added presentation and demo

--- a/index.html
+++ b/index.html
@@ -111,6 +111,24 @@
                 </p>
             </div>
         </div>
+
+        <div class="window">
+            <div class="window-header">
+                Learn Mode Presentation
+            </div>
+            <div class="window-content2">
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSkuZl_AYonArptpavIxaAGgRvK7ObeOBOmSlljvPYlgP-jh-QqmWOmyCBLol_wtLperSQP-asSXDWL/embed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+        </div>
+
+        <div class="window">
+            <div class="window-header">
+                Learn Mode Demo
+            </div>
+            <div class="window-content2">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/5aF4v1L6n2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </div>
     </main>
 </body>
 </html>
